# jordito-s

./: .gitignore  Makefile  README.md  api_betfair.py  back_favorito_2t.py  betfair_chamadas.ipynb  compose.yml  get_chats.py  helper_telegram.py  jordito.py  nosql.py  pyproject.toml  requirements.txt
